force-app/main/default/objects/Default_Crew__c/Default_Crew__c.object-meta.xml
<CustomObject>
    <label>Default Crew</label>
    <nameField>
        <label>Default Crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Crews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>