force-app/main/default/objects/Default_Crew__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the crew Active ?(This field was created for NPL MA).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>