force-app/main/default/objects/Default_Crew__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the Employee object(This field was created for NPL MA).</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Default Crews Employee</relationshipLabel>
    <relationshipName>Default_Crews_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>