force-app/main/default/objects/Default_Crew__c/fields/Employee_Company__c.field-meta.xml
<CustomField>
    <fullName>Employee_Company__c</fullName>
    <description>BA: NPLMA - Used to default value on Assigned Crew within Flow</description>
    <label>Employee Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>