force-app/main/default/objects/Default_Crew__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <description>The employee&apos;s first and last name(This field was created for NPL MA).</description>
    <formula>Employee__r.Name</formula>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>