force-app/main/default/objects/Default_Crew__c/fields/Foreman__c.field-meta.xml
<CustomField>
    <fullName>Foreman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the User object corresponding to the foreman(This field was created for NPL MA).</description>
    <label>Foreman</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Default_Crews_Foreman</relationshipName>
    <type>Lookup</type>
</CustomField>