force-app/main/default/objects/Default_Crew__c/fields/Foreman_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Is_Current_User__c</fullName>
    <description>Validation checkbox consumed in Youreka(This field was created for NPL MA).</description>
    <formula>Foreman__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreman Is Current User</label>
    <type>Checkbox</type>
</CustomField>