force-app/main/default/objects/Default_Crew__c/fields/Foreman_is_User_OR_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Foreman_is_User_OR_Supervisor__c</fullName>
    <description>BA: NPLMA - Used to preload default crew on JHA for foremen and supervisors</description>
    <formula>IF(OR(Foreman__r.Id = $User.Id, $Profile.Name =&apos;Approvers&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreman is User OR Supervisor</label>
    <type>Checkbox</type>
</CustomField>