force-app/main/default/objects/Default_Crew__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the Youreka form, so it can be referenced from the form(This field was created for NPL MA).</description>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Default Crews Forms</relationshipLabel>
    <relationshipName>Default_Crews_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>