force-app/main/default/objects/Default_Crew__c/fields/Personnel_Number__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Number__c</fullName>
    <description>BA: NPLMA - Used to default value on Assigned Crew within Flow</description>
    <label>Personnel Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>