force-app/main/default/objects/Default_Crew__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Default Crews</relationshipLabel>
    <relationshipName>Default_Crews</relationshipName>
    <type>Lookup</type>
</CustomField>