force-app/main/default/objects/Default_Crew__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the ServiceResource corresponding to the foreman(This field was created for NPL MA).</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Default Crews SR</relationshipLabel>
    <relationshipName>Default_Crews_SR</relationshipName>
    <type>Lookup</type>
</CustomField>