force-app/main/default/objects/Default_Crew__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Default Crews WO</relationshipLabel>
    <relationshipName>Default_Crews_WO</relationshipName>
    <type>Lookup</type>
</CustomField>