force-app/main/default/objects/Default_Crew__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Foreman__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Form__c</columns>
    <columns>Employee__c</columns>
    <columns>EmployeeName__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>