force-app/main/default/objects/Default_Crew__c/listViews/Foreman.listView-meta.xml
<ListView>
    <fullName>Foreman</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Foreman__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Foreman__c</field>
        <operation>contains</operation>
        <value>Foreman</value>
    </filters>
    <label>Foreman</label>
</ListView>