force-app/main/default/objects/Default_Crew__c/listViews/Shashank_Crew.listView-meta.xml
<ListView>
    <fullName>Shashank_Crew</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Employee__c</columns>
    <columns>Foreman__c</columns>
    <columns>Foreman_Is_Current_User__c</columns>
    <columns>Form__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Shashank Crew</label>
</ListView>